--- a/puhelinluettelo/package.json
+++ b/puhelinluettelo/package.json
@@ -15,5 +15,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "json-server -p3001 db.json"
-  }
+  },
+  "proxy": "https://powerful-ridge-39719.herokuapp.com"
 }
